--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -3,6 +3,8 @@
     <color name="black">#FF000000</color>
     <color name="white">#FFFFFFFF</color>
     <color name="custom_blue">#0C91E0</color>
+    <color name="halfwarn">#483FC8</color>
+    <color name="warn">#FF1313</color>
 
 
 </resources>
