--- a/app/src/main/res/layout/activity_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_bmiactivity.xml
@@ -198,7 +198,7 @@
             android:text="0"
             android:textAlignment="center"
             android:textColor="@color/white"
-            android:textColorHint="#fce1dc"
+            android:textColorHint="#FCE1DC"
             android:textSize="30sp"
             android:textStyle="bold">
 
