--- a/app/src/main/res/layout/activity_result_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_result_bmiactivity.xml
@@ -90,6 +90,20 @@
 
     </android.widget.Button>
 
+    <SeekBar
+        android:id="@+id/bmiSeekBar"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/gotomain"
+        android:layout_marginTop="50dp"
+        android:layout_marginLeft="20dp"
+        android:layout_marginRight="20dp"
+        android:max="40"
+        android:progressDrawable="@drawable/progress_drawable"
+        android:thumbTint="@color/black">
+
+    </SeekBar>
+
 
 
 </RelativeLayout>
