--- a/app/src/main/res/drawable/progress_drawable.xml
+++ b/app/src/main/res/drawable/progress_drawable.xml
@@ -1,4 +1,3 @@
-<!-- progress_drawable.xml -->
 <layer-list xmlns:android="http://schemas.android.com/apk/res/android">
     <!-- Background color -->
     <item>
@@ -19,7 +18,7 @@
     <item android:id="@android:id/progress">
         <clip>
             <shape>
-                <solid android:color="#FFCC00"/> <!-- Cambia colore come necessario -->
+                <solid android:color="#FFCC00"/>
             </shape>
         </clip>
     </item>
