--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,6 +6,7 @@
     <color name="halfwarn">#483FC8</color>
     <color name="warn">#FF1313</color>
     <color name="progress_red">#e32222</color>
+    <color name="green">#28de49</color>
 
 
 </resources>
