--- a/app/src/main/res/layout/activity_result_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_result_bmiactivity.xml
@@ -24,7 +24,10 @@
         android:layout_height="wrap_content"
         android:layout_below="@+id/image_view"
         android:layout_centerInParent="true"
-        android:layout_marginTop="5dp"
+        android:layout_marginStart="10dp"
+        android:layout_marginTop="10dp"
+        android:layout_marginEnd="10dp"
+        android:layout_marginBottom="10dp"
         android:background="@drawable/cardbackground"
         android:padding="20dp">
 
@@ -132,8 +135,9 @@
         android:layout_below="@+id/bmiSeekBar"
         android:layout_centerInParent="true"
         android:layout_marginTop="40dp"
+        android:layout_marginEnd="10dp"
         android:background="@drawable/cardbackground"
-        android:padding="20dp">
+        android:padding="15dp">
 
         <TextView
             android:id="@+id/choicedisplay"
@@ -194,7 +198,7 @@
             android:layout_alignParentEnd="true"
             android:layout_marginTop="20dp"
             android:layout_marginEnd="5dp"
-            android:text="fdsfdsfdsfds"
+            android:text="suggestion here"
             android:textAlignment="center"
             android:textColor="@color/green"
             android:textSize="16sp" />
