Intent from BMIresult that open the select the correct workout plan. Logic to suggest workout based on age. Bug solved. Graphic improvement
TO BE DONE:
- Create all 9 different activity for each workout plan

--- a/app/src/main/res/layout/activity_workout_sel.xml
+++ b/app/src/main/res/layout/activity_workout_sel.xml
@@ -322,6 +322,7 @@
         android:textStyle="bold"
         android:layout_marginLeft="20dp"
         android:layout_marginRight="20dp"
+        android:onClick="openSingleWorkout"
         >
 
     </android.widget.Button>
