--- a/app/src/main/res/layout/activity_result_bmiactivity.xml
+++ b/app/src/main/res/layout/activity_result_bmiactivity.xml
@@ -179,7 +179,7 @@
             </androidx.appcompat.widget.AppCompatRadioButton>
 
             <androidx.appcompat.widget.AppCompatRadioButton
-                android:id="@+id/radio_weightloss"
+                android:id="@+id/radio_cut"
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:layout_weight="1"
