Ho creato il comando per aggiungere il weight target e poterlo salvare in una variabile denominata targetValue. Il lavoro non è ancora finito perchè devo migliorare il layout XML e perfezionare ancora qualche cosa

--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -139,7 +139,8 @@
         android:layout_marginTop="596dp"
         android:text="@string/target_weight_button"
         app:layout_constraintStart_toEndOf="@+id/button8"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        />
 
     <TextView
         android:id="@+id/textView"
