--- a/app/src/main/res/layout/activity_set_target.xml
+++ b/app/src/main/res/layout/activity_set_target.xml
@@ -5,37 +5,39 @@
     android:layout_width="match_parent"
     android:layout_height="match_parent"
     android:orientation="vertical"
+    android:paddingStart="32dp"
+    android:paddingEnd="32dp"
     tools:context=".setTarget">
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:layout_marginStart="16dp"
-        android:layout_marginEnd="16dp" />
+        android:layout_height="30dp"
+        android:layout_marginStart="30dp"
+        android:layout_marginEnd="30dp" />
 
     <TextView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="WEIGHT TARGET"
+        android:text="       WEIGHT TARGET"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="30sp" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="37dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="30dp"
         android:text="Welcome to our weight goal feature: "
         android:textColor="@color/design_default_color_on_secondary"
-        android:textSize="12sp" />
+        android:textSize="14sp" />
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="36dp"
         android:text="Here you can set your ideal weight target and track your transformation journey. "
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="10sp" />
@@ -50,7 +52,7 @@
 
     <TextView
         android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
+        android:layout_height="34dp"
         android:layout_marginStart="16dp"
         android:layout_marginEnd="16dp" />
 
@@ -63,7 +65,7 @@
 
     <EditText
         android:id="@+id/editTextTarget"
-        android:layout_width="match_parent"
+        android:layout_width="126dp"
         android:layout_height="wrap_content"
         android:hint="Insert target"
         android:inputType="numberDecimal" />
@@ -74,5 +76,19 @@
         android:text="Your journey to a healthier and stronger version of yourself starts here!"
         android:textColor="@color/design_default_color_on_secondary"
         android:textSize="10sp" />
+
+    <TextView
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginStart="16dp"
+        android:layout_marginEnd="16dp" />
+
+    <ImageView
+        android:id="@+id/imageView"
+        android:layout_width="wrap_content"
+        android:layout_height="391dp"
+        android:scaleX="0.8"
+        android:scaleY="0.8"
+        android:src="@drawable/weight_taget_icon" />
 
 </LinearLayout>
