--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -7,6 +7,8 @@
     <color name="warn">#FF1313</color>
     <color name="progress_red">#e32222</color>
     <color name="green">#28de49</color>
+    <color name="black_bg">#1E1D1D</color>
+    <color name="green_1">#64e87c</color>
 
 
 </resources>
