--- a/app/src/main/res/layout/activity_workout.xml
+++ b/app/src/main/res/layout/activity_workout.xml
@@ -4,20 +4,98 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".MainActivity">
-
-    <androidx.recyclerview.widget.RecyclerView
-        android:layout_marginTop="70dp"
-        android:id="@+id/recyclerview"
-        android:layout_width="match_parent"
-        android:layout_height="wrap_content" />
+    android:background="@color/black_bg"
+    tools:context=".Workout">
 
     <TextView
         android:id="@+id/textView2"
         android:layout_width="match_parent"
         android:layout_height="68dp"
         android:textSize="60dp"
-        android:text="@string/workout" />
+        android:text="@string/workout"
+        android:background="@drawable/cardbackground"
+        android:textColor="@color/progress_red"
+        android:gravity="center"/>
+
+    <!--Creating vertical line-->
+    <RelativeLayout
+        android:id="@+id/center_vertical_line"
+        android:layout_width="wrap_content"
+        android:layout_height="match_parent"
+        android:layout_centerHorizontal="true"/>
+
+    <!--Workout attributes1-->
+    <RelativeLayout
+        android:id="@+id/workout_attributes1"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView2"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/cardbackground"
+        android:layout_toStartOf="@id/center_vertical_line"
+        android:layout_alignParentStart="true">
+
+        <!--Bulk or cut or maint-->
+        <TextView
+            android:id="@+id/type_of_workout_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Type of workout"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:layout_alignParentStart="true"
+            android:gravity="center"/>
+
+        <!--day of the workout-->
+        <TextView
+            android:id="@+id/day_of_workout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:layout_below="@id/type_of_workout_text"
+            android:text="Day of workout"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:layout_alignParentStart="true"
+            android:gravity="center"/>
+
+
+    </RelativeLayout>
+
+    <!--Workout attributes2-->
+    <RelativeLayout
+        android:id="@+id/workout_attributes2"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:layout_below="@id/textView2"
+        android:layout_marginTop="5dp"
+        android:background="@drawable/cardbackground"
+        android:layout_toEndOf="@id/center_vertical_line"
+        android:layout_alignParentEnd="true">
+
+        <!--Workout duration-->
+        <TextView
+            android:id="@+id/workout_duration_text"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:text="Duration of workout"
+            android:textColor="@color/white"
+            android:textSize="30sp"
+            android:gravity="center"/>
+    </RelativeLayout>
+
+
+    <androidx.recyclerview.widget.RecyclerView
+        android:layout_below="@id/workout_attributes1"
+        android:id="@+id/recyclerview"
+        android:layout_width="match_parent"
+        android:layout_height="wrap_content"
+        android:background="@drawable/cardbackground"
+        android:layout_marginTop="5dp"/>
+
+
+
+
+
 
 
 </RelativeLayout>
