--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -9,6 +9,7 @@
     <color name="green">#28de49</color>
     <color name="black_bg">#1E1D1D</color>
     <color name="green_1">#64e87c</color>
+    <color name="red_button">#FF4C4C</color>
 
 
 </resources>
