--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -74,6 +74,7 @@
         android:layout_below="@id/liftlab_layout"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
+        android:paddingBottom="10dp"
         android:layout_marginTop="40dp"
         android:layout_marginStart="5dp"
         android:layout_marginEnd="5dp"
@@ -183,7 +184,8 @@
             android:layout_below="@id/button7"
             android:layout_marginTop="10dp"
             android:text="@string/target_weight_button"
-            android:textSize="20sp" />
+            android:textSize="20sp"
+            android:onClick="openSetTargetActivity"/>
 
     </RelativeLayout>
 
